Changes to index.html for Tasks Completion

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,23 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
+  <div> class:"header" </div>
+    <h1> Federico Mastandrea Portfolio Project </h1>
+    <h2> Sailor and QA </h2>
+  <div> class:"tagline" </div>
+    <h3> Learn more about me </h3>
+    <p> I enjoy hiking, working with GPS, sailing and reading </p>
+  <div> class:"skills" </div>
+    <h3> My Skills </h3>
+    <p> I'm known as a Jack of All Trades, but Master of None </p>
+    <ul>
+      <li> HTML </li>
+      <li> SQL </li>
+      <li> Maps </li>
+    </ul>
+  <div> class:"contact" </div>
+    <h3> Drop me a line </h3>
+    <p> Use <a> mailto:fedemastandrea@hotmail.com </a> to contact me </p>
   Welcome to the HTML Portfolio Project
 
 </body>
