--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,14 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-      <h1 class="header"> Federico Mastandrea Portfolio Project </h1>
+  <div class="header">
+    <h1> Federico Mastandrea Portfolio Project </h1>
     <h2> Sailor and QA </h2>
-  <div> class="tagline" </div>
+  <div class="tagline">
     <h3> Learn more about me </h3>
     <p> I enjoy hiking, working with GPS, sailing and reading </p>
-  <div> class="skills" </div>
+  </div>
+  <div class="skills">
     <h3> My Skills </h3>
     <p> I'm known as a Jack of All Trades, but Master of None </p>
     <ul>
@@ -20,10 +22,11 @@
       <li> SQL </li>
       <li> Maps </li>
     </ul>
-  <div> class="contact" </div>
+  </div>
+  <div class="contact">
     <h3> Drop me a line </h3>
     <p> Use <a> mailto:fedemastandrea@hotmail.com </a> to contact me </p>
-  Welcome to the HTML Portfolio Project
+  </div>
 
 </body>
 </html>
