--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   </div>
   <div class="contact">
     <h3> Drop me a line </h3>
-    <p> Use <a> mailto:fedemastandrea@hotmail.com </a> to contact me </p>
+    <p> Use <a href:"https://github.com/FedeMasta35"> El GitHub del Masta </a> to contact me </p>
   </div>
 
 </body>
